--- a/ResNet.ipynb
+++ b/ResNet.ipynb
@@ -165,13 +165,12 @@
     "class ResBlock(nn.Module):\n",
     "    def __init__(self, in_channels, out_channels):\n",
     "        super(ResBlock, self).__init__()\n",
-    "        self.in_channels = in_channels\n",
-    "        self.out_channels = out_channels\n",
-    "        self.conv1 = nn.Conv1d(in_channels, out_channels, kernel_size=9, padding=4)\n",
+    "        self.downsample = in_channels != out_channels\n",
+    "        self.conv1 = nn.Conv1d(in_channels, out_channels, kernel_size=9, padding=4, bias=False)\n",
     "        self.bn1 = nn.BatchNorm1d(out_channels)\n",
-    "        self.conv2 = nn.Conv1d(out_channels, out_channels, kernel_size=5, padding=2)\n",
+    "        self.conv2 = nn.Conv1d(out_channels, out_channels, kernel_size=5, padding=2, bias=False)\n",
     "        self.bn2 = nn.BatchNorm1d(out_channels)\n",
-    "        self.conv3 = nn.Conv1d(out_channels, out_channels, kernel_size=3, padding=1)\n",
+    "        self.conv3 = nn.Conv1d(out_channels, out_channels, kernel_size=3, padding=1, bias=False)\n",
     "        self.bn3 = nn.BatchNorm1d(out_channels)\n",
     "        self.id_conv = nn.Conv1d(in_channels, out_channels, kernel_size=1, bias=False)\n",
     "        self.id_bn = nn.BatchNorm1d(out_channels)\n",
@@ -179,7 +178,7 @@
     "    def forward(self, x):\n",
     "        # Shortcut\n",
     "        identity = x\n",
-    "        if self.in_channels != self.out_channels:\n",
+    "        if self.downsample:\n",
     "            identity = self.id_conv(x)\n",
     "        identity = self.id_bn(identity)\n",
     "        \n",
@@ -720,7 +719,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
